// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url = "***"
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Subject {
  id  String  @id @default(cuid())
  parentId  String  @default("0")
  name  String  @unique
  intro String?
  sort  Int @default(0)
  courses Course[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Teacher {
  id  String  @id @default(cuid())
  name  String  @unique
  avatar  String
  intro String?
  sort  Int @default(0)
  isDelete  Boolean @default(false)
  deletedAt DateTime?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Course {
  id  String  @id @default(cuid())
  category  Subject
  author  Teacher
  title String  @unique
  subTitle  String
  cover String
  level CourseLevel
  intro String?
  claim String?
  outcome String?
  student String?
  period  Float
  score  Float @default(5.0)
  scoreNum  Int @default(0)
  browseNum  Int @default(0)
  memberNum  Int @default(0)
  isTop Boolean @default(false)
  status  CourseStatus
  sort  Int @default(0)
  isDelete  Boolean @default(false)
  deletedAt DateTime?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

enum CourseLevel {
  ALL
  PRIMARY
  INTERMEDIATE
  EXPERT
}

enum CourseStatus {
  DRAFT
  NORMAL
}
