//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Subject {
  id String [pk]
  parentId String [not null, default: '0']
  name String [unique, not null]
  intro String
  sort Int [not null, default: 0]
  courses Course
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Teacher {
  id String [pk]
  name String [unique, not null]
  avatar String
  intro String
  sort Int [not null, default: 0]
  courses Course
  isDelete Boolean [not null, default: false]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Course {
  id String [pk]
  category Subject [not null]
  author Teacher [not null]
  title String [unique, not null]
  subTitle String [not null]
  cover String [not null]
  level CourseLevel [not null]
  intro String
  claim String
  outcome String
  student String
  period Float [not null, default: 0]
  score Float [not null, default: 5]
  scoreNum Int [not null, default: 0]
  browseNum Int [not null, default: 0]
  memberNum Int [not null, default: 0]
  isTop Boolean [not null, default: false]
  status CourseStatus [not null]
  sort Int [not null, default: 0]
  isDelete Boolean [not null, default: false]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subjectId String [not null]
  teacherId String [not null]
}

Enum CourseLevel {
  ALL
  PRIMARY
  INTERMEDIATE
  EXPERT
}

Enum CourseStatus {
  DRAFT
  NORMAL
}

Ref: Course.subjectId > Subject.id

Ref: Course.teacherId > Teacher.id